renamed route, updated doc
